--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -22,7 +22,11 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="github">
+                <a
+                  class="socials__link link"
+                  href="https://github.com/JulyKapuza"
+                  aria-label="github"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -30,7 +34,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="telegram">
+                <a
+                  class="socials__link link"
+                  href="https://www.instagram.com/goitclub/"
+                  aria-label="instagram"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -38,7 +46,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="facebook">
+                <a
+                  class="socials__link link"
+                  href="https://www.linkedin.com/company/goit-start-your-career-in-it/?originalSubdomain=ua"
+                  aria-label="linkedin"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -48,10 +60,11 @@
             <div class="swiper-slide__content">
               <div class="swiper-slide__thumb">
                 <p class="swiper-slide__text">
-                  I am very pleased that I had chosen GoIT.  During these two months, I have got a lot of
-                  information and it seemed to me, I will not be able to use it
-                  in practice. But the project work helped me to apply the
-                  skills and to receive the support from our team.
+                  I am very pleased that I had chosen GoIT. During these two
+                  months, I have got a lot of information and it seemed to me, I
+                  will not be able to use it in practice. But the project work
+                  helped me to apply the skills and to receive the support from
+                  our team.
                 </p>
               </div>
             </div>
@@ -76,7 +89,11 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="github">
+                <a
+                  class="socials__link link"
+                  href="https://github.com/maxyma-sanx"
+                  aria-label="github"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -84,7 +101,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="telegram">
+                <a
+                  class="socials__link link"
+                  href="https://www.instagram.com/goitclub/"
+                  aria-label="instagram"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -92,7 +113,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="facebook">
+                <a
+                  class="socials__link link"
+                  href="https://www.linkedin.com/company/goit-start-your-career-in-it/?originalSubdomain=ua"
+                  aria-label="linkedin"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -130,7 +155,11 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="github">
+                <a
+                  class="socials__link link"
+                  href="https://github.com/MaksymPavlichenko"
+                  aria-label="github"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -138,7 +167,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="telegram">
+                <a
+                  class="socials__link link"
+                  href="https://www.instagram.com/goitclub/"
+                  aria-label="instagram"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -146,7 +179,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="facebook">
+                <a
+                  class="socials__link link"
+                  href="https://www.linkedin.com/company/goit-start-your-career-in-it/?originalSubdomain=ua"
+                  aria-label="linkedin"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -174,7 +211,7 @@
               <img
                 class="thumb__avatar"
                 srcset="
-                  ./images/customer-reviews/reviews/photo-lavr.jpg 1x,
+                  ./images/customer-reviews/reviews/photo-lavr.jpg    1x,
                   ./images/customer-reviews/reviews/photo-lavr-2x.jpg 2x
                 "
                 src="./images/customer-reviews/reviews/photo-lavr.jpg"
@@ -185,7 +222,11 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="github">
+                <a
+                  class="socials__link link"
+                  href="https://github.com/the-most-trained-trainee"
+                  aria-label="github"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -193,7 +234,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="telegram">
+                <a
+                  class="socials__link link"
+                  href="https://www.instagram.com/goitclub/"
+                  aria-label="instagram"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -201,7 +246,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="facebook">
+                <a
+                  class="socials__link link"
+                  href="https://www.linkedin.com/company/goit-start-your-career-in-it/?originalSubdomain=ua"
+                  aria-label="linkedin"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -239,7 +288,11 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="github">
+                <a
+                  class="socials__link link"
+                  href="https://github.com/chertoha"
+                  aria-label="github"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -247,7 +300,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="telegram">
+                <a
+                  class="socials__link link"
+                  href="https://www.instagram.com/goitclub/"
+                  aria-label="instagram"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -255,7 +312,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="facebook">
+                <a
+                  class="socials__link link"
+                  href="https://www.linkedin.com/company/goit-start-your-career-in-it/?originalSubdomain=ua"
+                  aria-label="linkedin"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -293,7 +354,11 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="github">
+                <a
+                  class="socials__link link"
+                  href="https://github.com/Khamala"
+                  aria-label="github"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -301,7 +366,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="telegram">
+                <a
+                  class="socials__link link"
+                  href="https://www.instagram.com/goitclub/"
+                  aria-label="instagram"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -309,7 +378,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="facebook">
+                <a
+                  class="socials__link link"
+                  href="https://www.linkedin.com/company/goit-start-your-career-in-it/?originalSubdomain=ua"
+                  aria-label="linkedin"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -347,7 +420,11 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="github">
+                <a
+                  class="socials__link link"
+                  href="https://github.com/TulaidanOleh"
+                  aria-label="github"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -355,7 +432,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="telegram">
+                <a
+                  class="socials__link link"
+                  href="https://www.instagram.com/goitclub/"
+                  aria-label="instagram"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -363,7 +444,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="facebook">
+                <a
+                  class="socials__link link"
+                  href="https://www.linkedin.com/company/goit-start-your-career-in-it/?originalSubdomain=ua"
+                  aria-label="linkedin"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -402,7 +487,11 @@
             </div>
             <ul class="socials">
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="github">
+                <a
+                  class="socials__link link"
+                  href="https://github.com/Annyenkov"
+                  aria-label="github"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-footer-github"></use>
                   </svg>
@@ -410,7 +499,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="telegram">
+                <a
+                  class="socials__link link"
+                  href="https://www.instagram.com/goitclub/"
+                  aria-label="instagram"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#instagram"></use>
                   </svg>
@@ -418,7 +511,11 @@
               </li>
 
               <li class="socials__item">
-                <a class="socials__link link" href="" aria-label="facebook">
+                <a
+                  class="socials__link link"
+                  href="https://www.linkedin.com/company/goit-start-your-career-in-it/?originalSubdomain=ua"
+                  aria-label="linkedin"
+                >
                   <svg class="icon page-footer__icon" width="20" height="20">
                     <use href="./images/icons.svg#linkedin"></use>
                   </svg>
@@ -428,7 +525,12 @@
             <div class="swiper-slide__content">
               <div class="swiper-slide__thumb">
                 <p class="swiper-slide__text">
-                 Working in a team project, I am glad to meet interesting people and learn from their experience and knowledge. For myself, I acquired emphasized new methods for solving problems. Thanks to everyone for the excellent work and project.</p>
+                  Working in a team project, I am glad to meet interesting
+                  people and learn from their experience and knowledge. For
+                  myself, I acquired emphasized new methods for solving
+                  problems. Thanks to everyone for the excellent work and
+                  project.
+                </p>
               </div>
             </div>
 
