--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -82,7 +82,7 @@
                   ./images/customer-reviews/reviews/photo-max-2x.jpg 2x
                 "
                 src="./images/customer-reviews/reviews/photo-max.jpg"
-                alt="Juliia Kapuza"
+                alt="Maxym Koralkov"
                 width="150"
                 height="150"
               />
