--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -33,6 +33,7 @@
           href="https://www.youtube.com/watch?v=q27ltn0jtxQ"
           class="button hero__text-button button--with-hover"
           data-modal-milkvideo
+          aria-label="Link to YouTube video"
         >
           <svg class="icon hero__icon">
             <use href="./images/icons.svg#icon-arrow-products"></use>
