--- a/src/partials/modals.html
+++ b/src/partials/modals.html
@@ -51,7 +51,9 @@
         <div class="mob-menu-modal__stepper-container">
           <span class="mob-menu-modal__stepper">
             <button class="minus-button" aria-label="Decrease button">–</button>
+            <label for="quantity-coffee" hidden> Decrease quantity</label>
             <input
+              id="quantity-coffee"
               class="products-counter"
               type="number"
               value="0"
@@ -103,7 +105,9 @@
         <div class="mob-menu-modal__stepper-container">
           <span class="mob-menu-modal__stepper">
             <button class="minus-button" aria-label="Decrease button">–</button>
+            <label for="quantity-strawberry" hidden> Decrease quantity</label>
             <input
+              id="quantity-strawberry"
               class="products-counter"
               type="number"
               value="0"
@@ -154,7 +158,9 @@
         <div class="mob-menu-modal__stepper-container">
           <span class="mob-menu-modal__stepper">
             <button class="minus-button" aria-label="Decrease button">–</button>
+            <label for="quantity-raspberry" hidden> Decrease quantity</label>
             <input
+              id="quantity-raspberry"
               type="number"
               class="products-counter"
               value="0"
@@ -205,7 +211,9 @@
         <div class="mob-menu-modal__stepper-container">
           <span class="mob-menu-modal__stepper">
             <button class="minus-button" aria-label="Decrease button">–</button>
+            <label for="quantity-banana" hidden> Decrease quantity</label>
             <input
+              id="quantity-banana"
               type="number"
               class="products-counter"
               value="0"
