--- a/src/sass/gallery/_gallery.scss
+++ b/src/sass/gallery/_gallery.scss
@@ -1,42 +1,43 @@
 .gallery {
   @media screen and (max-width: 767.98px) {
-    background-image: linear-gradient(
-      to bottom,
-      $secondary-background-color 29%,
-      $primary-background-color 29%,
-      $primary-background-color 71%
-    );
+    background-image: linear-gradient(to bottom,
+        $secondary-background-color 29%,
+        $primary-background-color 29%,
+        $primary-background-color 71%);
   }
+
   @media screen and (min-width: 768px) and (max-width: 1199.98px) {
-    background-image: linear-gradient(
-      to bottom,
-      $secondary-background-color 56%,
-      $primary-background-color 56%,
-      $primary-background-color 44%
-    );
+    background-image: linear-gradient(to bottom,
+        $secondary-background-color 56%,
+        $primary-background-color 56%,
+        $primary-background-color 44%);
   }
+
   @media screen and (min-width: 1200px) {
-    background-image: linear-gradient(
-      to bottom,
-      $secondary-background-color 29%,
-      $primary-background-color 29%,
-      $primary-background-color 71%
-    );
+    background-image: linear-gradient(to bottom,
+        $secondary-background-color 29%,
+        $primary-background-color 29%,
+        $primary-background-color 71%);
   }
+
   .gallery__container {
     @media screen and (max-width: 319.98px) {
       width: 90vw;
     }
+
     padding: 0;
     margin: 0 auto;
+
     @media screen and (min-width: 1200px) {
       padding: 0 93px;
     }
   }
 }
+
 .gallery__list {
   width: 100%;
   max-width: 100vw;
+
   @media screen and (min-width: 320px) {
     display: grid;
     column-gap: 0.8%;
@@ -44,25 +45,46 @@
     grid-template-columns: repeat(7, 1fr);
     grid-template-rows: [start] 1fr [row2] 1fr [row-end] 1fr;
   }
+
+  //Chertok code
+  @media screen and (min-width: $desktop) {
+    display: grid;
+    column-gap: 0.8%;
+    row-gap: 2%;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: [start] 1fr [row2] 1fr [row-end] 1fr;
+
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  //Chertok code
+
 }
+
 .gallery__item {
   position: relative;
   height: auto;
   padding: 0 0 99% 0;
   border-radius: 17%;
   overflow: hidden;
+
   @media screen and (max-width: 319.98px) {
     &:not(:last-child) {
       margin-bottom: 10px;
     }
   }
+
   &:nth-child(4) {
     border-radius: 9%;
   }
+
   box-shadow: 0px 12px 10px -1px rgba(0, 0, 0, 0.215);
   -webkit-box-shadow: 0px 12px 10px -1px rgba(0, 0, 0, 0.215);
   -moz-box-shadow: 0px 12px 10px -1px rgba(0, 0, 0, 0.215);
 }
+
 .gallery__item img {
   position: absolute;
   top: 0;
@@ -72,47 +94,58 @@
   object-fit: cover;
   z-index: 9;
   transition: transform 2s cubic-bezier(0.52, 0.46, 0.48, 1.03);
+
   &:hover,
   &:focus {
     transform: scale(1.2) rotate(10deg);
   }
 }
+
 @media screen and (min-width: 320px) {
   .gallery__item:nth-child(1) {
     grid-row-start: row2;
   }
+
   .gallery__item:nth-child(2) {
     grid-row-start: row2;
     transform: translateY(64%);
   }
+
   .gallery__item:nth-child(3) {
     transform: translateY(64%);
     grid-column-start: 2;
   }
+
   .gallery__item:nth-child(4) {
     grid-column: span 2;
     grid-row: span 2;
   }
+
   .gallery__item:nth-child(5) {
     grid-row-start: row-end;
     grid-column-start: 3;
   }
+
   .gallery__item:nth-child(6) {
     transform: translateY(71%);
   }
+
   .gallery__item:nth-child(7) {
     transform: translateY(71%);
     grid-row-start: row2;
     grid-column-start: 5;
   }
+
   .gallery__item:nth-child(8) {
     transform: translateY(40%);
   }
+
   .gallery__item:nth-child(9) {
     grid-row-start: row2;
     grid-column-start: 6;
     transform: translateY(40%);
   }
+
   .gallery__item:nth-child(10) {
     grid-column-start: 7;
     grid-row-start: row2;
