--- a/src/sass/products/_product-description.scss
+++ b/src/sass/products/_product-description.scss
@@ -24,6 +24,12 @@
     border-radius: 24px;
     text-align: center;
 
+    @media screen and (max-width: $mobile-max) {
+        max-width: 400px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
     @media screen and (min-width:$tablet) {
         flex-basis: calc((100% - 32px) / 3);
         padding-top: 118px;
@@ -215,7 +221,7 @@
         background-image: url(../images/products/desktop/prod-shakes-des-x1.png);
         background-size: 368px 394px;
 
-       /* @media screen and (min-device-pixel-ratio: 2),
+        /* @media screen and (min-device-pixel-ratio: 2),
         screen and (min-resolution: 192dpi),
         screen and (min-resolution: 2dppx) {
 
